--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Sharma Kirana Store</title>
+    <title>QuikKiran | Dashboard</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
@@ -30,7 +30,7 @@
 
         .header {
             background: linear-gradient(90deg, #1a73e8, #4285f4);
-            padding: 1rem 1.5rem;
+            padding: 1.3rem 1.5rem;
             color: #ffffff;
             display: flex;
             align-items: center;
@@ -184,7 +184,7 @@
         }
 
         .footer i {
-            font-size: 1.9rem;
+            font-size: 1.7rem;
             color: #1a73e8;
         }
 
