--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -31,6 +31,7 @@
         .header {
             background: linear-gradient(90deg, #1a73e8, #4285f4);
             padding: 1.5rem 1.5rem;
+            padding-top: 2rem;
             color: #ffffff;
             display: flex;
             align-items: center;
@@ -162,7 +163,7 @@
 
         .menu p {
             margin: 0.5rem 0 0;
-            font-size: 0.8rem;
+            font-size: 1rem;
         }
 
         .footer {
@@ -206,7 +207,7 @@
             }
 
             .order p {
-                font-size: 1rem;
+                font-size: 0.8rem;
             }
 
             .menu {
