--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -54,7 +54,7 @@
 
         .header p {
             margin: 0;
-            font-size: 1.2rem;
+            font-size: 1.0rem;
             color: #dce3f0;
         }
 
@@ -78,7 +78,7 @@
         .add-products{
             padding: 1.5rem ;
             margin: 0.5rem 1rem;
-            border-radius: 0.625rem;
+            border-radius: 50px;
             text-align: center;
             font-size: 1.4rem;
             display: flex;
@@ -201,8 +201,12 @@
                 font-size: 2.5rem;
             }
 
-            .button, .add-products {
+            .add-products {
                 font-size:1.2rem;
+                
+            }
+            .button{
+                font-size:1.3rem;
                 
             }
 
@@ -226,7 +230,7 @@
             </div>
         </div>
         <div class="button">
-            <span>Add New Bill<br>नया बिल</span>
+            <span>Add New Bill<br>( नया बिल )</span>
             <i class="fas fa-shopping-cart"></i>
         </div>
         <div class="add-products">
