--- a/public/shopname.html
+++ b/public/shopname.html
@@ -57,8 +57,8 @@
 
       .profile-picture-uploader {
         position: relative;
-        width: 250px; /* Adjusted width */
-        height: 250px; /* Adjusted height */
+        width: 250px;
+        height: 250px;
         border-radius: 50%;
         overflow: hidden;
         cursor: pointer;
@@ -88,13 +88,13 @@
         text-align: center;
         position: absolute;
         pointer-events: none;
-        z-index: 10; /* Ensure text stays on top */
+        z-index: 10;
       }
 
       .plus-icon {
         position: absolute;
-        bottom: 65px; /* Adjusted positioning */
-        right: 15px; /* Adjusted positioning */
+        bottom: 65px;
+        right: 15px;
         background-color: #ff3131;
         color: white;
         width: 40px;
@@ -103,9 +103,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 28px; /* Increased font size */
+        font-size: 28px;
         border: 3px solid white;
-        z-index: 20; /* Ensure icon is on top */
+        z-index: 20;
       }
 
       .page1section2 {
@@ -176,21 +176,20 @@
         margin-bottom: 20px;
       }
 
-      /* Responsive Styles */
       @media (max-width: 600px) {
         .profile-picture-uploader {
           width: 310px;
           height: 310px;
           position: absolute;
-          top: 40%; /* Move to 50% from the top */
-          left: 50%; /* Move to 50% from the left */
+          top: 40%;
+          left: 50%;
           transform: translate(-50%, -50%);
         }
 
         .plus-icon {
           width: 30px;
           height: 30px;
-          font-size: 20px; /* Adjusted font size */
+          font-size: 20px;
         }
 
         .page1section2 {
@@ -202,7 +201,6 @@
         }
       }
 
-      /* Process indicator with 3 dots */
       .progress-indicator {
         display: flex;
         justify-content: center;
@@ -220,22 +218,9 @@
         transition: background-color 0.3s, opacity 0.3s ease-in-out;
       }
 
-      /* Active dot styles */
       #thirdactivedot {
         background-color: white;
         opacity: 1;
-      }
-
-      /* Animation remains for visual effect */
-      @keyframes bounce {
-        0%,
-        80%,
-        100% {
-          transform: scale(1);
-        }
-        40% {
-          transform: scale(1.3);
-        }
       }
     </style>
   </head>
@@ -246,7 +231,6 @@
           <img src="img2.png" id="whitelogo" />
           <p class="slogan" id="greeting"></p>
 
-          <!-- Profile Picture Uploader -->
           <div
             class="profile-picture-uploader"
             onclick="document.getElementById('fileInput').click();"
@@ -294,60 +278,47 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      // Retrieve the username from localStorage
+      // Display username from localStorage
       const username = localStorage.getItem("username");
       const greetingElement = document.getElementById("greeting");
-
       if (username) {
         greetingElement.innerHTML = `Hello, ${username}! 👋`;
       }
 
-      const submitBtn = document.getElementById("submitBtn");
-      const shopnameInput = document.getElementById("shopname");
-
-      submitBtn.addEventListener("click", function () {
-        const shopname = shopnameInput.value.trim();
-
-        if (shopname !== "") {
-          // Store the shop name in localStorage
-          localStorage.setItem("shopname", shopname);
-
-          // Here you can add logic to handle the shop name submission
-          alert(`Shop name "${shopname}" submitted!`);
-        } else {
-          alert("Please enter a shop name.");
-        }
-      });
-
-      function goToLoadingPage() {
-      var shopName = document.getElementById("shopname").value;
-      if (shopName.trim() !== "") {
-        // Redirect to the loading page
-        window.location.href = "aftersigninloading.html";
-      } else {
-        alert("Please enter a shop name.");
-      }
-    }
-    
+      // Handle file input for profile picture
       const fileInput = document.getElementById("fileInput");
       const profilePicture = document.getElementById("profilePicture");
       const uploadText = document.getElementById("uploadText");
 
       fileInput.addEventListener("change", function () {
         const file = this.files[0];
-
         if (file) {
           const reader = new FileReader();
-
           reader.onload = function (e) {
-            profilePicture.src = e.target.result;
+            const imageData = e.target.result;
+            profilePicture.src = imageData;
             profilePicture.classList.add("active");
-            uploadText.style.display = "none"; // Hide the upload text
+            uploadText.style.display = "none";
+            
+            // Store the image data in localStorage
+            localStorage.setItem("profileImage", imageData);
           };
-
           reader.readAsDataURL(file);
         }
       });
+
+      // Handle form submission
+      function goToLoadingPage() {
+        const shopName = document.getElementById("shopname").value;
+        if (shopName.trim() !== "") {
+          // Store the shop name in localStorage
+          localStorage.setItem("shopname", shopName);
+          // Redirect to the loading page
+          window.location.href = "aftersigninloading.html";
+        } else {
+          alert("Please enter a shop name.");
+        }
+      }
     </script>
   </body>
 </html>
