--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -270,7 +270,7 @@
         </div>
       </div>
 
-      <div class="button">
+      <div class="button" onclick="window.location.href='barcode.html'">
         <span>Add New Bill<br />( नया बिल )</span>
         <i class="fas fa-shopping-cart"></i>
       </div>
