--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -275,7 +275,7 @@
         <i class="fas fa-shopping-cart"></i>
       </div>
 
-      <div class="add-products">
+      <div class="add-products" onclick="window.location.href='add-product.html'">
         <span>Add New Products</span>
         <i class="fas fa-plus-circle"></i>
       </div>
