--- a/public/add-product.html
+++ b/public/add-product.html
@@ -22,7 +22,7 @@
       .header {
         background-color: #004d61;
         color: white;
-        padding: 16px 24px;
+        padding: 22px 24px;
         display: flex;
         align-items: center;
         position: sticky;
@@ -312,7 +312,7 @@
   </head>
   <body>
     <header class="header">
-      <span class="back-button">←</span>
+      <span class="back-button" onclick="window.location.href='dashboard.html'"">←</span>
       <h1>Add Products Manually</h1>
     </header>
 
