--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,9 @@
     </style>
   </head>
   <body>
+    
     <div id="loader">
+      
       <div class="loader-animation"></div>
     </div>
     <div class="main">
@@ -55,56 +57,34 @@
         </div>
         <div class="page1section2">
           <div class="page1section2inner">
-            <form action="store_no.php" method="POST">
-              <label>Phone Number</label>
-              <input
-                type="tel"
-                name="number"
-                id="number"
-                placeholder="Enter your number"
-                value="+91"
-                required
-                onfocus="this.setSelectionRange(this.value.length, this.value.length);"
-              />
-              <p>By logging in you are agreeing to our policies</p>
-              <div class="progress-indicator">
-                <span class="dot active"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-              </div>
-              <button type="submit" id="submitBtn" style="width: 100%">
-                Submit
-              </button>
-            </form>
+            <label>Phone Number</label>
+            <input
+              type="tel"
+              name="number"
+              id="number"
+              placeholder="Enter your number"
+              value="+91"
+              required
+              onfocus="this.setSelectionRange(this.value.length, this.value.length);"
+            />
+            <p>By logging in you are agreeing to our policies</p>
+            <div class="progress-indicator">
+              <span class="dot active"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+            <button id="submitBtn">Submit</button>
             <label id="team">Made with ❤️ by TeamInnov4tors</label>
           </div>
         </div>
       </div>
     </div>
+
     <script>
-      // if ("serviceWorker" in navigator) {
-      //   window.addEventListener("load", () => {
-      //     navigator.serviceWorker
-      //       .register("/service-worker.js")
-      //       .then((registration) => {
-      //         console.log(
-      //           "Service Worker registered with scope:",
-      //           registration.scope
-      //         );
-      //       })
-      //       .catch((error) => {
-      //         console.log("Service Worker registration failed:", error);
-      //       });
-      //   });
-      // }
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
-          // Get the base path from window.location
-          const basePath = window.location.pathname.replace(/\/[^/]*$/, "");
-          const swPath = `${basePath}/service-worker.js`;
-
           navigator.serviceWorker
-            .register(swPath)
+            .register("/service-worker.js")
             .then((registration) => {
               console.log(
                 "Service Worker registered with scope:",
@@ -112,10 +92,54 @@
               );
             })
             .catch((error) => {
-              console.error("Service Worker registration failed:", error);
+              console.log("Service Worker registration failed:", error);
             });
         });
       }
+
+      document
+        .getElementById("submitBtn")
+        .addEventListener("click", function (event) {
+          event.preventDefault();
+          const phoneNumber = document.getElementById("number").value;
+
+          if (!phoneNumber || phoneNumber.trim() === "+91") {
+            alert("Please enter a valid phone number.");
+            return;
+          }
+
+          const submitBtn = document.getElementById("submitBtn");
+          submitBtn.disabled = true;
+
+          document.getElementById("loader").style.display = "flex";
+
+          fetch("http://localhost:3000/send-otp", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ number: phoneNumber }),
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              if (data.success) {
+                window.location.href = `acceptOTP.html?phone=${encodeURIComponent(
+                  phoneNumber
+                )}`;
+              } else {
+                throw new Error(data.message);
+              }
+            })
+            .catch((error) => {
+              alert(error.message);
+            })
+            .finally(() => {
+              document.getElementById("loader").style.display = "none";
+              submitBtn.disabled = false;
+            });
+        });
+
+
     </script>
     <script src="script.js"></script>
   </body>
