--- a/public/aftersigninloading.html
+++ b/public/aftersigninloading.html
@@ -64,6 +64,7 @@
 
       window.onload = function () {
         setTimeout(function () {
+          localStorage.setItem("signupComplete", "true"); 
           window.location.href = "dashboard.html";
         }, 4000);
       };
